--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,11 +1,13 @@
 <h2>Products</h2>
 
 <div *ngFor="let product of products">
-  <h3>{{ product.name }}</h3>
-  
-  <a [title]="product.name + ' details'">
-    {{ product.name }}
-  </a>
+  <h3>
+    <a
+      [title]="product.name + ' details'"
+      [routerLink]="['/products', product.id]">
+      {{ product.name }}
+    </a>
+  </h3>
   
   <p *ngIf="product.description">
     Description: {{ product.description }}
@@ -16,7 +18,8 @@
   </button>
 
   <app-product-alerts
-    [product]="product">
+    [product]="product"
+    (notify)="onNotify()">
   </app-product-alerts>
 
 </div>
